[package]
name = "il0373"
version = "0.1.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
description = "Driver for the IL0373 e-Paper display (EPD) controller, for use with embedded-graphics"
documentation = "https://docs.rs/il0373"
repository = "https://github.com/gpgreen/il0373"
readme = "README.md"
keywords = ["embedded", "epd", "epaper", "display", "il0373", "embedded-graphics"]
categories = ["embedded", "no-std"]
license = "GPL-3.0-or-later"

[dependencies]
nb = "1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.embedded-graphics]
optional = true
version = "0.6.2"

[dev-dependencies]
ufmt = "0.1.0"
panic-halt = "0.2.0"
linux-embedded-hal = "0.3.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
sram = []
examples = ["embedded-graphics"]
