[package]
name = "il0373"
version = "0.1.2"
authors = ["Greg Green <ggreen@bit-builder.com>"]
description = "Driver for the IL0373 e-Paper display (EPD) controller, for use with embedded-graphics"
documentation = "https://docs.rs/il0373"
repository = "https://github.com/gpgreen/il0373"
readme = "README.md"
keywords = ["epaper", "il0373", "embedded-graphics"]
categories = ["embedded", "graphics", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gpgreen/il0373"

[dependencies]
nb = "1"
embedded-graphics-core = "0.4"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.embedded-graphics]
optional = true
version = "0.8"

[dev-dependencies]
linux-embedded-hal = "0.3.0"

[profile.dev]
lto = true
incremental = false
codegen-units = 1
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
sram = []
test = ["embedded-graphics"]
