[package]
name = "il0373"
version = "0.2.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
description = "Driver for the IL0373 e-Paper display (EPD) controller, for use with embedded-graphics"
documentation = "https://docs.rs/il0373"
repository = "https://github.com/gpgreen/il0373"
readme = "README.md"
keywords = ["epaper", "il0373", "embedded-graphics"]
categories = ["embedded", "graphics", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0"

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-graphics]
optional = true
version = "0.8.1"

[dev-dependencies]
linux-embedded-hal = "0.4.0"

[profile.dev]
lto = true
incremental = false
codegen-units = 1
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
sram = []
test = ["embedded-graphics"]
