[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
readme = "README.md"
name = "feather-m4-eink"
version = "0.1.0"

[dependencies]
nb = "0.1.3"
cortex-m = "0.7.1"
embedded-graphics = "0.8"
heapless = "0.6.0"
panic-halt = "0.2.0"

[dependencies.cortex-m-rt]
version = "0.6.13"
optional = true

# hal for board
#[dependencies.atsamd-hal]
#atsamd-hal = "0.16.0"
#default-features = false
#features = ["unproven"]

[dependencies.feather_m4]
version = "0.11.0"

[dependencies.il0373]
path = "../.."
features = ["sram"]

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.panic-semihosting]
version = "0.5.6"

[dependencies.cortex-m-semihosting]
version = "0.3.7"

[dev-dependencies]
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
#panic-itm = "0.4.2"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
