[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-eink"
version = "0.1.0"

[dependencies]
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
#panic-halt = "0.2.0"
#panic-itm = "0.4.2"
panic-semihosting = "0.6.0"
embedded-graphics = "0.6.2"
heapless = "0.6.0"
# hal for board
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"] }

[dependencies.il0373]
path = "../../"
features = ["sram"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
