[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-eink"
version = "0.1.0"

[dependencies]
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8"
heapless = "0.6.0"
# hal for board
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"] }

[dependencies.il0373]
path = "../../"
features = ["sram"]

[profile.dev]
lto = true
incremental = false
codegen-units = 1
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
