[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-eink"
version = "0.1.0"

[dependencies]
nb = "1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8"
heapless = "0.6.0"
# hal for board
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.2.0", features = ["stm32f103rb", "rt", "defmt", "time-driver-any"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal = "1.0"

[dependencies.il0373]
path = "../../"
features = ["sram"]

[profile.dev]
lto = true
incremental = false
codegen-units = 1
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
